--- a/svg.html
+++ b/svg.html
@@ -100,6 +100,7 @@ var length = path.getTotalLength();
 
 [DEMO1](http://cssdeck.com/labs/ironman-svg-line-animation)
 [DEMO2](http://output.jsbin.com/lafaqi/1/)
+[DEMO3](http://tympanus.net/Development/SVGDrawingAnimation/)
 ***
 ##兼容性
  ![svg图片](http://luckyflower.github.io/img/svg.png)
@@ -189,7 +190,8 @@ var length = path.getTotalLength();
     </style>
 
 <p><a href="http://cssdeck.com/labs/ironman-svg-line-animation">DEMO1</a>
-<a href="http://output.jsbin.com/lafaqi/1/">DEMO2</a></p>
+<a href="http://output.jsbin.com/lafaqi/1/">DEMO2</a>
+<a href="http://tympanus.net/Development/SVGDrawingAnimation/">DEMO3</a></p>
 
 <hr>
 
